# data-api

./: .gitignore  MANIFEST.in  README.md  init.wsgi  pyproject.toml  wsgi.py
avert_api/: __init__.py  api.yml
avert_api/imagery/: __init__.py
avert_api/imagery/infrared/: __init__.py  models.py  operations.py
avert_api/imagery/visible/: __init__.py  models.py  operations.py
avert_api/manager/: __init__.py  crud.py  database.py
example_configs/: .env  .flaskenv
